--- a/SoundRecorder/SoundRecorder.rc
+++ b/SoundRecorder/SoundRecorder.rc
@@ -91,10 +91,11 @@ BEGIN
     PUSHBUTTON      "save2file",IDC_BTN_REC2FILE,86,82,57,14
     PUSHBUTTON      "stop",IDC_BTN_STOP,86,97,57,14
     GROUPBOX        "sample rate:",IDC_STATIC,7,6,62,106
-    LTEXT           "mic gain:",IDC_STATIC,13,121,35,8
-    EDITTEXT        IDC_EDT_MIC_GAIN,53,118,40,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "+",IDC_BTN_INC_GAIN,122,118,19,14
-    PUSHBUTTON      "-",IDC_BTN_DEC_GAIN,98,118,19,14
+    LTEXT           "mic gain:",IDC_STATIC,7,121,32,8
+    EDITTEXT        IDC_EDT_MIC_GAIN,43,118,40,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "+",IDC_BTN_INC_GAIN,107,118,19,14
+    PUSHBUTTON      "-",IDC_BTN_DEC_GAIN,86,118,19,14
+    LTEXT           "",IDC_TXT_REC_TIME,130,121,24,8
 END
 
 
